gccida/c1/eliminate_regs
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs/src/reload1.c:2748:29: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  eliminate_regs( rtx x, machine_mode mem_mode, rtx insn) 
                            ^
                            enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs/src/reload1.c:2752:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs/src/reload1.c:2759:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs/src/reload1.c:2760:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v13; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs/src/reload1.c:2762:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs/src/reload1.c:2763:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v16; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs/src/reload1.c:2768:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs/src/reload1.c:2771:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v24; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs/src/reload1.c:2774:4: error: expected ';' after expression
rtx v27; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs/src/reload1.c:2774:5: error: use of undeclared identifier 'v27'
rtx v27; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs/src/reload1.c:2781:4: error: expected ';' after expression
rtx v34; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs/src/reload1.c:2781:5: error: use of undeclared identifier 'v34'
rtx v34; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs/src/reload1.c:2794:4: error: expected ';' after expression
rtx v47; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs/src/reload1.c:2794:5: error: use of undeclared identifier 'v47'
rtx v47; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs/src/reload1.c:2795:4: error: expected ';' after expression
rtx v48; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs/src/reload1.c:2795:5: error: use of undeclared identifier 'v48'
rtx v48; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs/src/reload1.c:2797:4: error: expected ';' after expression
rtx v50; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs/src/reload1.c:2797:5: error: use of undeclared identifier 'v50'
rtx v50; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs/src/reload1.c:2798:4: error: expected ';' after expression
rtx v51; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/eliminate_regs/src/obj/reload1.o] Error 1
